fix: add Homepage configuration and volume mounting
- Add ConfigMap with basic Homepage configuration
- Update Deployment to mount config volume at /app/config
- Add proper probe delays to allow startup time

--- a/charts/applications/homepage/templates/deployment.yaml
+++ b/charts/applications/homepage/templates/deployment.yaml
@@ -26,9 +26,21 @@ spec:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 30
+            periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /
               port: http
+            initialDelaySeconds: 10
+            periodSeconds: 5
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: config
+              mountPath: /app/config
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: {{ include "homepage.fullname" . }}-config
