--- a/charts/applications/homepage/templates/deployment.yaml
+++ b/charts/applications/homepage/templates/deployment.yaml
@@ -14,6 +14,21 @@ spec:
       labels:
         {{- include "homepage.selectorLabels" . | nindent 8 }}
     spec:
+      initContainers:
+        - name: setup-config
+          image: busybox:1.35
+          command:
+            - sh
+            - -c
+            - |
+              cp /tmp/config/* /app/config/
+              mkdir -p /app/config/logs
+              chmod 755 /app/config/logs
+          volumeMounts:
+            - name: config-source
+              mountPath: /tmp/config
+            - name: config
+              mountPath: /app/config
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -39,8 +54,9 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /app/config
-              readOnly: true
       volumes:
-        - name: config
+        - name: config-source
           configMap:
             name: {{ include "homepage.fullname" . }}-config
+        - name: config
+          emptyDir: {}
