--- a/charts/applications/velero/values.yaml
+++ b/charts/applications/velero/values.yaml
@@ -6,6 +6,7 @@ velero:
       image: velero/velero-plugin-for-aws:v1.9.0
       
   configuration:
+    # Backup storage location (array format)
     backupStorageLocation:
       - name: default
         provider: aws
@@ -18,7 +19,13 @@ velero:
         credential:
           name: cloud-credentials
           key: cloud
-          
+    
+    # Disable volume snapshots since we're using File System Backup
+    volumeSnapshotLocation: []
+    
+  # Disable volume snapshots entirely for staging
+  snapshotsEnabled: false
+  
   # Enable node agent for File System Backup (NFS support)
   nodeAgent:
     enabled: true
@@ -49,3 +56,4 @@ schedules:
       includedNamespaces: ["*"]
       storageLocation: default
       ttl: "720h0m0s"  # 30 days
+      defaultVolumesToFsBackup: true  # Use File System Backup instead of snapshots
