--- a/charts/applications/velero/Chart.yaml
+++ b/charts/applications/velero/Chart.yaml
@@ -1,18 +1,20 @@
-# charts/applications/velero/Chart.yaml
 apiVersion: v2
 name: velero
-description: Velero backup solution for Lab1830 homelab
+description: Velero backup and restore for Kubernetes
 type: application
 version: 0.1.0
-appVersion: "1.13.0"
+appVersion: "v1.12.1"
+
 dependencies:
   - name: velero
-    version: "~6.6.0" 
-    repository: https://vmware-tanzu.github.io/helm-charts
+    version: "5.1.4"
+    repository: "https://vmware-tanzu.github.io/helm-charts"
+
 keywords:
   - backup
+  - restore
   - disaster-recovery
-  - kubernetes
+  - velero
 home: https://velero.io
 sources:
   - https://github.com/vmware-tanzu/velero
