updated repoURL to ssh in velero

--- a/argocd/apps/staging/velero.yaml
+++ b/argocd/apps/staging/velero.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/brianjlehnen/homelab-gitops.git
+    repoURL: git@github.com:brianjlehnen/homelab-gitops.git
     targetRevision: staging
     path: charts/applications/velero
     helm:
