--- a/argocd/apps/staging/velero.yaml
+++ b/argocd/apps/staging/velero.yaml
@@ -25,6 +25,17 @@ spec:
               schedule: "0 2 * * *"  # 2 AM for staging
               template:
                 ttl: "72h"  # 3 days retention for staging
+        
+        # Bucket auto-creation for staging
+        bucketInit:
+          enabled: true
+          bucketName: "velero-backups-staging"
+          minioService: "nfs-gateway"
+          minioPort: 9000
+          credentials:
+            accessKeyId: "velero"
+            secretAccessKey: "velero123"
+
   destination:
     server: https://kubernetes.default.svc
     namespace: velero
