--- a/charts/applications/velero/values.yaml
+++ b/charts/applications/velero/values.yaml
@@ -25,7 +25,7 @@ velero:
     backupStorageLocation:
       - name: nfs-backup
         provider: aws
-        bucket: "{{ .Values.bucketName }}"
+        bucket: velero-backups
         config:
           region: homelab
           s3ForcePathStyle: "true"
@@ -112,7 +112,7 @@ bucketInit:
   mcVersion: "RELEASE.2024-07-31T15-58-33Z"
   minioService: "nfs-gateway"
   minioPort: 9000
-  bucketName: "{{ .Values.bucketName }}"
+  bucketName: velero-backups
   credentials:
     accessKeyId: "velero"
     secretAccessKey: "velero123"
