--- a/argocd/apps/staging/restic.yaml
+++ b/argocd/apps/staging/restic.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/brianjlehnen/homelab-gitops.git
+    repoURL: git@github.com:brianjlehnen/homelab-gitops.git
     targetRevision: hashi-vault-staging
     path: charts/applications/restic
     helm:
