Restructure Vault configuration with environment-specific values.

--- a/argocd/apps/staging/vault.yaml
+++ b/argocd/apps/staging/vault.yaml
@@ -12,37 +12,11 @@ spec:
     targetRevision: staging
     path: charts/applications/vault
     helm:
-      values: |
-        # Staging-specific ingress configuration
-        ingress:
-          enabled: true
-          ingressClassName: nginx
-          hosts:
-            - host: vault-staging.lab1830.com
-              paths:
-                - path: /
-                  pathType: Prefix
-          tls:
-            - secretName: vault-staging-tls
-              hosts:
-                - vault-staging.lab1830.com
-
-        # Additional staging overrides
-        vault:
-          server:
-            ingress:
-              enabled: true
-              ingressClassName: nginx
-              hosts:
-                - host: vault-staging.lab1830.com
-                  paths: ["/"]
-              tls:
-                - secretName: vault-staging-tls
-                  hosts:
-                    - vault-staging.lab1830.com
+      valueFiles:
+        - values/staging.yaml
   destination:
     server: https://kubernetes.default.svc
-    namespace: vault
+    namespace: vault-staging
   syncPolicy:
     automated:
       prune: false
