--- a/argocd/apps/production/vault.yaml
+++ b/argocd/apps/production/vault.yaml
@@ -13,39 +13,7 @@ spec:
     path: charts/applications/vault
     helm:
       valueFiles:
-        - values.yaml
-      values: |
-        # Production-specific overrides
-        server:
-          ha:
-            enabled: true
-            replicas: 2
-          dataStorage:
-            enabled: true
-            size: 10Gi
-            storageClass: nfs-client
-          resources:
-            requests:
-              memory: 256Mi
-              cpu: 100m
-            limits:
-              memory: 512Mi
-              cpu: 500m
-        ui:
-          enabled: true
-          serviceType: ClusterIP
-        # Production mode (persistent storage)
-        global:
-          enabled: true
-        injector:
-          enabled: true
-          resources:
-            requests:
-              memory: 64Mi
-              cpu: 50m
-            limits:
-              memory: 128Mi
-              cpu: 100m
+        - values/production.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: vault
